--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,13 @@
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
 
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <load src="./partials/hero.html" />
+      <load src="./partials/about.html" />
+      <load src="./partials/advantages.html" />
+      <load src="./partials/assortment.html" />
+      <load src="./partials/gallery.html" />
+      <load src="./partials/feedbacks.html" />
+      <load src="./partials/support.html" />
     </main>
 
     <load src="./partials/footer.html" />
