--- a/src/index.html
+++ b/src/index.html
@@ -2,24 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>EcoTote</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- Roman Kovalov -->
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
 
     <main>
-      <load src="./partials/hero.html" />
+      <!-- Viktoriia Pavlenko -->
+      <load src="./partials/hero.html" /> 
+
+      <!-- Alina -->
       <load src="./partials/about.html" />
+
+      <!-- Olga Tarasenko -->
       <load src="./partials/advantages.html" />
+
+      <!-- Володимир Андрусенко -->
       <load src="./partials/assortment.html" />
+
+      <!-- Zakhar -->
       <load src="./partials/gallery.html" />
+
+      <!-- Anhelina Martynishyna -->
       <load src="./partials/feedbacks.html" />
+
+      <!-- Алина Ященко -->
       <load src="./partials/support.html" />
     </main>
 
+    <!-- Максим Яцкулич -->
     <load src="./partials/footer.html" />
 
     <script type="module" src="./main.js"></script>
